feat(auth): fix authorization server login flow